syntax = "proto3";

option java_multiple_files = true;
option java_package = "vn.com.sky";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Simple {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}


// The response message containing the greetings
message HelloReply {
    //string message = 1;
   repeated RoleItem items = 1;
}


message RoleItem {
    uint64 ownerOrgId = 1;
    string code = 2;
    string name = 3;
}



